Commit : arrows fixed position : width change of boxes : arrows too much to the edge fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,6 @@ header h2{
 }
 
 .box-wrapper{
-    max-width: 60rem;
     padding: 0rem;
     text-align: left;
     margin: auto;
@@ -95,7 +94,8 @@ header .header-links a:first-child {
 .top-text, .intro-text, .bulleted-section, .box-text {
     border:solid 1rem #1F5B65;
     padding: 1rem;
-    margin: 0;
+    margin: auto;
+    width: 70%;
 }
 
 .bulleted-section, .link-below-bio {
@@ -452,7 +452,7 @@ footer a:hover {
     header h1 {
         text-align: center;
     }
-    .custom-section-1 {
+    .top-text, .intro-text, .bulleted-section, .box-text, .custom-section-1 {
         width: 95%;
     }
 }
@@ -474,6 +474,7 @@ footer a:hover {
 }
 
 .swiper-button-prev, .swiper-button-next {
+    top: var(--swiper-navigation-top-offset,150px) !important;
     color: #111;
 }
 
@@ -516,11 +517,11 @@ footer a:hover {
         padding-bottom: 1rem;
     }
 }
-@media screen and (max-width: 1015px) {
+/* @media screen and (max-width: 1015px) {
     .box-wrapper {
         margin: 0 2rem;
     }
-}
+} */
 @media screen and (max-width: 825px) {
     .review-slider {
         width: 100%;
@@ -534,12 +535,10 @@ footer a:hover {
         text-align: left;
     }
     .review-slider .swiper-slide {
-        padding: 0 1.8rem;
+        padding: 0 2.8rem;
     } 
     .swiper-button-prev, .swiper-button-next {
-        height: 2rem !important;
-        overflow: hidden;
-        margin: -0.4rem;
+        margin: -0.1rem;
     }
 }
 .simple-bar {
